# rust-rest-llm-ether

./: .env.example  .gitignore  Cargo.toml  README.md  account_config.json  config.toml
src/: api.rs  config.rs  ether.rs  init.rs  main.rs  state.rs  utils.rs
src/errors/: mod.rs
src/handlers/: account_handler.rs  mod.rs  wallet_handler.rs
src/models/: mod.rs
src/services/: mod.rs  wallet_service.rs  web3_service.rs
