[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0"
dotenv = "0.15.0"
secp256k1 = { version = "0.20.3", features = ["rand"] }
tokio = { version= "1", features = ["full"] }
web3 = "0.17.0"
tiny-keccak = { version = "1.4" }
rustc-serialize = "0.3"
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"